# PRRTT-Template

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/web/: package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.html
core/: Cargo.toml
interface/: index.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json
interface/app/: index.tsx
interface/components/: Button.tsx  Counter.tsx  index.ts
interface/hooks/: useCounter.tsx
